woan_ant/dev/release/kong/one-gateway-ingress-dev.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: one-gateway-ingress-dev
  namespace: one-gateway-dev
  annotations:
    konghq.com/strip-path: "true"
    konghq.com/plugins: ratelimit-dev
    konghq.com/methods: "GET, POST"
spec:
  ingressClassName: kong
  rules:
  - host: gateway-dev.1digital.app
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: one-gateway-service-dev
            port:
              number: 3000
